# SANA

./: .gitignore  CMakeLists.txt  README.md
cmake/: conan.cmake
docs/: OtherUsage.html  dir_138aff360eb965c43b94267b8d1ce09e.html  dir_31a378c84b956866319ca9d9294f1959.html  graph_legend.html  index.html  md__home_viet_CLionProjects_SANA_documentation_pages_help_output.html  md__home_viet_CLionProjects_SANA_documentation_pages_help_tutorial.html  pages.html
documentation/: CMakeLists.txt  Doxyfile
src/: Alignment.cpp  Alignment.hpp  CMakeLists.txt  Graph.README.md  Graph.cpp  Graph.hpp  Report.cpp  Report.hpp  STYLE_GUIDE.md  Utility.cpp  Utility.hpp  complementaryProteins.cpp  complementaryProteins.hpp  main.cpp
src/arguments/: ArgumentParser.cpp  ArgumentParser.hpp  GraphLoader.cpp  GraphLoader.hpp  MethodSelector.cpp  MethodSelector.hpp  SupportedArguments.cpp  SupportedArguments.hpp  measureSelector.cpp  measureSelector.hpp  modeSelector.cpp  modeSelector.hpp
src/configuration/: Configuration.cpp  Configuration.hpp  ConfigurationOption.cpp  ConfigurationOption.hpp
src/graph/: Graph.cpp  Graph.hpp  GraphLoader.cpp  GraphLoader.hpp
src/lib/: BinaryGraph.cpp  CMakeLists.txt  Graph.cpp  LinearRegression.cpp  PairwiseAlignment.cpp  Random.cpp  SANA.cpp  SANAConfiguration.cpp  SANAResult.cpp  TemperatureSchedule.cpp  Timer.cpp  Utils.cpp  WeightedGraph.cpp
src/lib-sana/: CMakeLists.txt
src/lib-sana/Graph/: BinaryGraph.cpp
src/lib-sana/graph/: BinaryGraph.cpp  WeightedGraph.cpp
src/lib-sana/include/: AdjacencyMatrix.hpp  BinaryGraph.hpp  Edge.hpp  Graph.hpp
src/lib-sana/include/graph/: BinaryGraph.hpp  Graph.hpp
src/lib-sana/include/graph/detail/: AdjacencyMatrix.hpp
src/lib-sana/include/parser/: GraphParser.hpp
src/lib-sana/include/parser/leda/: LedaParser.hpp  LedaTokenizer.hpp
src/lib-sana/parser/leda/: LedaParser.cpp  LedaTokenizer.cpp
src/lib/include/: PairwiseAlignment.hpp  Utils.hpp
src/lib/include/sana/: BinaryGraph.hpp  Graph.hpp  SANA.hpp  SANAConfiguration.hpp  WeightedGraph.hpp
src/main-sana/: main.cpp
src/measures/: AlignmentEvaluator.cpp  AlignmentEvaluator.hpp  CoreScore.cpp  CoreScore.hpp  EdgeCorrectness.cpp  EdgeCorrectness.hpp  EdgeDifference.cpp  EdgeDifference.hpp  EdgeExposure.cpp  EdgeExposure.hpp  EdgeRatio.cpp  EdgeRatio.hpp  ExternalWeightedEdgeConservation.cpp  ExternalWeightedEdgeConservation.hpp  GoAverage.cpp  GoAverage.hpp  InducedConservedStructure.cpp  InducedConservedStructure.hpp  InvalidMeasure.cpp  InvalidMeasure.hpp  JaccardSimilarityScore.cpp  JaccardSimilarityScore.hpp  LargestCommonConnectedSubgraph.cpp  LargestCommonConnectedSubgraph.hpp  Measure.cpp  Measure.hpp  MeasureCombination.cpp  MeasureCombination.hpp  MultiEdgeCorrectness.cpp  MultiEdgeCorrectness.hpp  MultiS3.cpp  MultiS3.hpp  NetGO.cpp  NetGO.hpp  NodeCorrectness.cpp  NodeCorrectness.hpp  SquaredEdgeScore.cpp  SquaredEdgeScore.hpp  SymmetricEdgeCoverage.cpp  SymmetricEdgeCoverage.hpp  (+4 more)
src/measures/localMeasures/: EdgeCount.cpp  EdgeCount.hpp  EdgeDensity.cpp  EdgeDensity.hpp  ExternalSimMatrix.cpp  ExternalSimMatrix.hpp  GenericLocalMeasure.cpp  GenericLocalMeasure.hpp  GoSimilarity.cpp  GoSimilarity.hpp  Graphlet.cpp  Graphlet.hpp  GraphletCosine.cpp  GraphletCosine.hpp  GraphletLGraal.cpp  GraphletLGraal.hpp  GraphletNorm.cpp  GraphletNorm.hpp  Importance.cpp  Importance.hpp  LocalMeasure.cpp  LocalMeasure.hpp  NodeCount.cpp  NodeCount.hpp  NodeDensity.cpp  NodeDensity.hpp  Sequence.cpp  Sequence.hpp
src/methods/: HillClimbing.cpp  HillClimbing.hpp  Method.cpp  Method.hpp  NoneMethod.cpp  NoneMethod.hpp  RandomAligner.cpp  RandomAligner.hpp  SANA.cpp  SANA.hpp
src/methods/wrappers/: CytoGEDEVOWrapper.cpp  CytoGEDEVOWrapper.hpp  GEDEVOWrapper.cpp  GEDEVOWrapper.hpp  GHOSTWrapper.cpp  GHOSTWrapper.hpp  GREATWrapper.cpp  GREATWrapper.hpp  HubAlignWrapper.cpp  HubAlignWrapper.hpp  LGraalWrapper.cpp  LGraalWrapper.hpp  MIGRAALWrapper.cpp  MIGRAALWrapper.hpp  MagnaWrapper.cpp  MagnaWrapper.hpp  NATALIEWrapper.cpp  NATALIEWrapper.hpp  NETALWrapper.cpp  NETALWrapper.hpp  OptNetAlignWrapper.cpp  OptNetAlignWrapper.hpp  PINALOGWrapper.cpp  PINALOGWrapper.hpp  PISwapWrapper.cpp  PISwapWrapper.hpp  SANAPISWAPWrapper.cpp  SANAPISWAPWrapper.hpp  SPINALWrapper.cpp  SPINALWrapper.hpp  WAVEWrapper.cpp  WAVEWrapper.hpp  WrappedMethod.cpp  WrappedMethod.hpp
src/modes/: AlphaEstimation.cpp  AlphaEstimation.hpp  AnalysisMode.cpp  AnalysisMode.hpp  ClusterMode.cpp  ClusterMode.hpp  CreateShadow.cpp  CreateShadow.hpp  DebugMode.cpp  DebugMode.hpp  Experiment.cpp  Experiment.hpp  Mode.cpp  Mode.hpp  NormalMode.cpp  NormalMode.hpp  ParameterEstimation.cpp  ParameterEstimation.hpp  SanaMode.cpp  SanaMode.hpp  SimilarityMode.cpp  SimilarityMode.hpp
src/schedulemethods/: Ameur.cpp  Ameur.hpp  IteratedAmeur.cpp  IteratedAmeur.hpp  IteratedLinearRegression.cpp  IteratedLinearRegression.hpp  LinearRegressionModern.cpp  LinearRegressionModern.hpp  LinearRegressionVintage.cpp  LinearRegressionVintage.hpp  PBadBinarySearch.cpp  PBadBinarySearch.hpp  ScheduleMethod.cpp  ScheduleMethod.hpp  StatisticalTest.cpp  StatisticalTest.hpp  scheduleUtils.cpp  scheduleUtils.hpp
src/temperature/: TemperatureSchedule.cpp  TemperatureSchedule.hpp
src/utils/: ComputeGraphletsWrapper.cpp  ComputeGraphletsWrapper.hpp  FileIO.cpp  FileIO.hpp  LinearRegression.cpp  LinearRegression.hpp  Matrix.hpp  NormalDistribution.cpp  NormalDistribution.hpp  ParetoFront.cpp  ParetoFront.hpp  SparseMatrix.hpp  Timer.cpp  Timer.hpp  Utility.cpp  Utility.hpp  computeGraphlets.cpp  computeGraphlets.hpp  randomSeed.cpp  stdiobuf.hpp  templateUtils.cpp  utils.cpp  utils.hpp
test/: AlignmentTest.cpp  CMakeLists.txt  main.cpp
test/configuration/: ConfigurationOptionTest.cpp  ConfigurationTest.cpp
test/graph/: GraphLoaderTest.cpp  GraphTest.cpp
test/lib-sana/: CMakeLists.txt
test/lib-sana/detail/: AdjacencyMatrixTest.cpp
test/lib-sana/graph/: BinaryGraphTest.cpp
test/resources/: testgraph.gw
test/schedulemethods/: LinearRegressionModernTest.cpp
test/utils/: UtilityTest.cpp
(+8 files in other folders)
